--- a/fonts/pontano-sans-regular/stylesheet.css
+++ b/fonts/pontano-sans-regular/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'pontano_sansregular';
+    font-family: 'pontanosansregular';
     src: url('pontanosans-regular-webfont.eot');
     src: url('pontanosans-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('pontanosans-regular-webfont.woff2') format('woff2'),
