--- a/app.css
+++ b/app.css
@@ -2,3 +2,20 @@
 .popup {position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,.5);}
 .popup-content {display:block; position:fixed; top: 50%; left: 50%; box-sizing:border-box; transform:translate(-50%, -50%); max-height:100%; overflow:auto;}
 .popup-show {display:block;}
+
+/* Cover animado | <div class="cover cover-animate"><img src="file.jpg" /></div> */
+.cover.cover-animate img {
+    -webkit-transition: all 1s ease; /* Safari and Chrome */
+    -moz-transition: all 1s ease; /* Firefox */
+    -o-transition: all 1s ease; /* IE 9 */
+    -ms-transition: all 1s ease; /* Opera */
+    transition: all 1s ease;
+        max-width: 100%;
+}
+.cover.cover-animate:hover img {
+    -webkit-transform:scale(1.25); /* Safari and Chrome */
+    -moz-transform:scale(1.25); /* Firefox */
+    -ms-transform:scale(1.25); /* IE 9 */
+    -o-transform:scale(1.25); /* Opera */
+     transform:scale(1.25);
+}
