--- a/fonts/opensans-bold/stylesheet.css
+++ b/fonts/opensans-bold/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'open_sansbold';
+    font-family: 'opensansbold';
     src: url('opensans-bold-webfont.eot');
     src: url('opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('opensans-bold-webfont.woff2') format('woff2'),
