--- a/fonts/myriadpro-semibold/stylesheet.css
+++ b/fonts/myriadpro-semibold/stylesheet.css
@@ -1,6 +1,6 @@
 
 @font-face {
-  font-family: 'MyriadPro-Semibold';
+  font-family: 'myriadprosemibold';
   src: url('MyriadPro-Semibold.eot?#iefix') format('embedded-opentype'),  url('MyriadPro-Semibold.otf')  format('opentype'),
 	     url('MyriadPro-Semibold.woff') format('woff'), url('MyriadPro-Semibold.ttf')  format('truetype'), url('MyriadPro-Semibold.svg#MyriadPro-Semibold') format('svg');
   font-weight: normal;
